@@ -1041,6 +1041,21 @@ chinstdir     =
 uninstall     = {75E71ADD-042C-4F30-BFAC-A9EC42351313}
 uninstparam   = /passive /norestart
 
+[Py2Exe]
+
+category      = Development
+describe      = Python 2 Executable Library
+website       = http://www.py2exe.org/
+scrape        = http://sourceforge.net/projects/py2exe/download/
+version       = py2exe-([0-9]\.[0-9]\.[0-9]).win32-py2.5.exe
+download      = http://downloads.sourceforge.net/py2exe/
+filename      = py2exe-#VERSION#.win32-py2.5.exe
+instparam     =
+upgrades      = false
+chinstdir     =
+uninstall     = py2exe-py2.5
+uninstparam   =
+
 [PyCurl]
 
 category      = Development
